package services;

import models.entities.usuarios.Contribuyente;
import models.entities.solicitudes.EstadoSolicitudEliminacion;
import models.entities.solicitudes.SolicitudEliminacion;
import java.util.List;

public interface ISolicitudEliminacionService {

    public void crearSolicitud(String justificacion, Long idHecho, Contribuyente solicitante);

    public String validarJustificacion(String justificacionSolicitud);
}
