package entities.hechos;

public class Multimedia {
    private String url;
    private String extension;
}
