package entities.hechos;

public enum Origen {
    CARGA_MANUAL,
    DATASET,
    CONTRIBUYENTE,
    VISUALIZADOR
}
