package entities.solicitudes;

public interface IDetectorDeSpam {
    boolean isSpam(String texto);
}
